chore: add debuging log